examples/demos/failing/93_fail_semantic_undeclared_variable.hing
shuru
num a = 3
b = a + 2
khatam
